--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -48,7 +48,7 @@
                 <div class="details-grid">
                     <div class="detail-item">
                         <span class="detail-label">Benutzer-ID</span>
-                        <span class="detail-value">{{ user.id.substring(0, 12) }}...</span>
+                        <span class="detail-value">{{ user.id }}</span>
                     </div>
                     <div class="detail-item">
                         <span class="detail-label">E-Mail-Adresse</span>
