--- a/src/app/components/imprint/imprint.component.html
+++ b/src/app/components/imprint/imprint.component.html
@@ -12,7 +12,7 @@
         <div class="info-content">
           <h3>Angaben gemäß § 5 TMG</h3>
           <p>
-            LeonardsMedia<br />
+            pndaCM<br />
             Kirchergarten 19<br />
             57614 Wahlrod
           </p>
@@ -38,7 +38,7 @@
         <div class="info-content">
           <h3>Kontakt</h3>
           <p>
-            E-Mail: <a href="mailto:tom@leonardsmedia.de">tom&#64;leonardsmedia&#46;de</a>
+            E-Mail: <a href="mailto:tom@pndaCM.de">tom&#64;pndaCM&#46;de</a>
           </p>
         </div>
       </div>
@@ -98,7 +98,7 @@
         <h3>Fragen oder Anregungen?</h3>
         <p>Kontaktieren Sie uns gerne bei Fragen zum Impressum oder unseren Services.</p>
         <div class="contact-details">
-          <a href="mailto:tom@leonardsmedia.de">tom&#64;leonardsmedia&#46;de</a>
+          <a href="mailto:tom@pndaCM.de">tom&#64;pndaCM&#46;de</a>
         </div>
       </div>
 
