--- a/src/app/components/car-form-modal/car-form-modal.component.html
+++ b/src/app/components/car-form-modal/car-form-modal.component.html
@@ -1,5 +1,5 @@
 <!-- src/app/features/cars/car-form-modal/car-form-modal.component.html -->
-<div class="modal-overlay" *ngIf="show" (click)="onClose()">
+<div class="modal-overlay" *ngIf="show">
   <div class="modal" (click)="$event.stopPropagation()">
     
     <!-- Header -->
