--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -8,8 +8,8 @@
       <div class="hero__content">
 
         <h1 class="hero__title">
-          <span class="hero__title-main">Dein Auto. Dein Tuning-Plan.</span>
-          <span class="hero__title-sub">Garage, Termine & Budget an einem Ort.</span>
+          <span class="hero__title-main">Dein Car Manager.</span>
+          <span class="hero__title-sub">Garage, Termine & Budgetplanung an einem Ort.</span>
         </h1>
 
         <div class="hero__value-props">
@@ -27,7 +27,7 @@
           </div>
         </div>
 
-        <div class="hero__actions">
+        <!-- <div class="hero__actions">
           <button class="btn btn--secondary" (click)="router.navigate(['/mygarage'])">
             <span class="material-symbols-outlined">garage_door</span>
             Meine Garage
@@ -36,7 +36,7 @@
             <span class="material-symbols-outlined">calculate</span>
             Budget & Rechner öffnen
           </button>
-        </div>
+        </div> -->
 
         <!-- <div class="finder-teaser" (click)="router.navigate(['/planner'])">
           <div class="finder-icon">
