--- a/src/app/components/tuning-browser/tuning-browser.component.scss
+++ b/src/app/components/tuning-browser/tuning-browser.component.scss
@@ -1077,7 +1077,7 @@
   padding: 1.5rem;
   border-bottom: 1px solid $color-gray-100;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
 
   h2 {
