--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -35,7 +35,11 @@
         </a>
         <a (click)="routeTo('/tuning-browser')" routerLink="/tuning-browser" routerLinkActive="active"
           [routerLinkActiveOptions]="{ exact: true }">
-          Tuning Browser
+          Tuning Manager
+        </a>
+        <a (click)="routeTo('/budget-calc')" routerLink="/budget-calc" routerLinkActive="active"
+          [routerLinkActiveOptions]="{ exact: true }">
+          Rechner
         </a>
 
 
